# solcpp

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  base58.hpp  base64.hpp  conan_profile.example  conan_profile.linux  conan_profile.macos  conanfile.txt  fixedp.h  mango_v3.hpp  solana.hpp
.github/workflows/: docker-tests.yml  security.yml  style.yml  tests.yml
examples/: AccountSubscribe.cpp  CMakeLists.txt  ConnectionExample.cpp  GetAccountInfo.cpp  accountSubscribe.cpp  account_subscribe.cpp  connection_example.cpp  getAccountInfo.cpp  orderbookSubscribe.cpp  placeOrder.cpp  positions.cpp  sendTransaction.cpp  ticker.cpp  websocket.hpp  websocket_example.cpp  ws.cpp  ws_logs.cpp
examples/orderbookSubscribe/: bookSideSubscription.hpp  orderbook.hpp  orderbookSubscribe.cpp  tradesSubscription.hpp  wssSubscriber.hpp
include/: Account.hpp  Base58.hpp  Base64.hpp  Connection.hpp  Instruction.hpp  KeyPair.hpp  MangoAccount.hpp  PrivateKey.hpp  PublicKey.hpp  PushCompact.hpp  Request.hpp  SendTransaction.hpp  Transaction.hpp  base58.hpp  base64.hpp  fixedp.h  int128.hpp  mango_account.hpp  mango_v3.hpp  orderbook.hpp  serum_v3.hpp  solana.h  solana.hpp  solcpp.hpp  utils.h  utils.hpp  websocket.hpp
include/orderbook/: levelOne.hpp  order.hpp  orderbook.hpp
include/solana/: account.hpp  connection.hpp  instruction.hpp  int128.hpp  keypair.hpp  privatekey.hpp  publickey.hpp  request.hpp  transaction.hpp  types.hpp
include/subscriptions/: accountSubscriber.hpp  bookSide.hpp  orderbook.hpp  trades.hpp  wssSubscriber.hpp
lib/: CMakeLists.txt  Connection.cpp  SolContext.h  connection.cpp  solana.cpp  websocket.cpp
lib/idl/: main.ts  package-lock.json  package.json
lib/idl/generator/: accounts.js  helper.js  main.js  types.js
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-DmPEnMctEwjyDgMjcTNmKdVNaJFyPoEbW9XYLDotECEw.tar.bz2  snapshot-4500-AMQ2jE66foqdUf9myzijxPirguxvTG3mDa92MkUgW5xB.tar.bz2  snapshot-4600-7Hpg83iytetqeycboHM15HrhA2m8EDonzuz4t2GjECpW.tar.bz2  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/: 0.1  100.0  1000.20  1008.21  108.2  1100.22  1109.23  1200.24  1206.25  1300.26  1306.27  1400.28  141.4  1414.29  1500.30  1516.31  1600.32  1620.33  1700.34  1713.35  1800.36  1804.37  1900.38  1906.39  200.3  2000.40  2003.41  2100.42  2108.43  213.5  2200.44  2212.45  2300.46  2329.47  2400.48  2422.49  2500.50  2527.51  2600.52  2630.53  (+56 more)
test-ledger/rocksdb/: 000545.sst  000548.sst  000551.sst  000563.sst  000569.sst  000572.sst  000576.sst  000580.sst  000583.sst  000586.sst  000589.sst  000592.sst  000595.sst  IDENTITY  LOG  LOG.old.1665397961019112  MANIFEST-000086
test-ledger/snapshot/3900/: 3900
test-ledger/snapshot/4000/: 4000
test-ledger/snapshot/4100/: 4100
test-ledger/snapshot/4200/: 4200
test-ledger/snapshot/4300/: 4300
test-ledger/snapshot/4400/: 4400
test-ledger/snapshot/4500/: 4500
test-ledger/snapshot/4600/: 4600
tests/: CMakeLists.txt  main.cpp
tests/fixtures/base58/: 14ivtgssEBoBjuZJtSAPKYgpUK7DmnSwuPMqJoVTSgKJ  98pjRuQjK3qA6gXts96PqZT4Ze5QmnCmt3QYjhbUSPue  9xQeWvG816bUx9EPjHmaT23yvVM2ZWbrrpZb9PusVFin  MangoCzJ36AjZyKwVj3VnYU4GTonjfVEnJmvvWaxLac  mv3ekLzLbnVPNxjSKvqBpU3ZeZXPQdEC3bp5MDEBG68
tests/fixtures/mango_v3/: FillEvent.b64
tests/fixtures/solana/: id.json
websocket/: dbg.cpp  websocket.cpp
